--- a/Snake Game/Makefile
+++ b/Snake Game/Makefile
@@ -1,16 +1,22 @@
 CC = gcc
 CFLAGS = -Wall -Wextra
+
 INCLUDES = -Isrc/Include -Lsrc/lib
 LIBS = -lSDL2main -lSDL2
+
 SRCS = snake.c
 OBJS = $(SRCS:.c=.o)
+
 MAIN = snake
+
+
+all: clean $(MAIN)
 
 $(MAIN): $(OBJS)
 	$(CC) $(CFLAGS) $(INCLUDES) -o $(MAIN) $(OBJS) $(LIBS)
 
-.c.o:
-	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
+snake.o: snake.c
+	$(CC) $(CFLAGS) $(INCLUDES) -c snake.c -o snake.o
 
 clean: 
-	$(RM) *.o *~ $(MAIN)
+	rm -f *.o *~ $(MAIN)
